tutorial/lessons/083/example-4/2-prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-http01-prod
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - prometheus.marinyuk.tk
    secretName: prometheus-marinyuk-tk-key-pair
  rules:
  - host: prometheus.marinyuk.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
